@@ -1,30 +1,30 @@
 package com.packt.modern.api.hateoas;
 
-import static java.util.stream.Collectors.toList;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
-
 import com.packt.modern.api.controller.CartsController;
 import com.packt.modern.api.entity.CartEntity;
 import com.packt.modern.api.model.Cart;
 import com.packt.modern.api.service.ItemService;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.StreamSupport;
 import org.springframework.beans.BeanUtils;
 import org.springframework.hateoas.server.mvc.RepresentationModelAssemblerSupport;
 import org.springframework.stereotype.Component;
 
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.StreamSupport;
+
+import static java.util.stream.Collectors.toList;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
+
 /**
  * @author : github.com/sharmasourabh
- * @project : Chapter06 - Modern API Development with Spring and Spring Boot
- **/
+ * @project : Chapter06 - Modern API Development with Spring and Spring Boot Ed 2
+ */
 @Component
-public class CartRepresentationModelAssembler extends
-    RepresentationModelAssemblerSupport<CartEntity, Cart> {
+public class CartRepresentationModelAssembler
+    extends RepresentationModelAssemblerSupport<CartEntity, Cart> {
 
-  private ItemService itemService;
+  private final ItemService itemService;
 
   /**
    * Creates a new {@link RepresentationModelAssemblerSupport} using the given controller class and
@@ -48,8 +48,9 @@ public class CartRepresentationModelAssembler extends
     BeanUtils.copyProperties(entity, resource);
     resource.id(cid).customerId(uid).items(itemService.toModelList(entity.getItems()));
     resource.add(linkTo(methodOn(CartsController.class).getCartByCustomerId(uid)).withSelfRel());
-    resource.add(linkTo(methodOn(CartsController.class).getCartItemsByCustomerId(uid.toString()))
-        .withRel("cart-items"));
+    resource.add(
+        linkTo(methodOn(CartsController.class).getCartItemsByCustomerId(uid))
+            .withRel("cart-items"));
     return resource;
   }
 
@@ -60,10 +61,8 @@ public class CartRepresentationModelAssembler extends
    */
   public List<Cart> toListModel(Iterable<CartEntity> entities) {
     if (Objects.isNull(entities)) {
-      return Collections.emptyList();
+      return List.of();
     }
-    return StreamSupport.stream(entities.spliterator(), false).map(e -> toModel(e))
-        .collect(toList());
+    return StreamSupport.stream(entities.spliterator(), false).map(this::toModel).collect(toList());
   }
-
 }
