@@ -1,16 +1,18 @@
 package com.packt.modern.api.repository;
 
-import static java.util.stream.Collectors.toList;
-
 import com.packt.modern.api.entity.CartEntity;
 import com.packt.modern.api.entity.ItemEntity;
 import com.packt.modern.api.entity.OrderEntity;
 import com.packt.modern.api.entity.OrderItemEntity;
 import com.packt.modern.api.exception.ResourceNotFoundException;
-import com.packt.modern.api.model.Cart;
 import com.packt.modern.api.model.NewOrder;
 import com.packt.modern.api.model.Order.StatusEnum;
 import com.packt.modern.api.service.ItemService;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.transaction.Transactional;
+import org.springframework.stereotype.Repository;
+
 import java.math.BigDecimal;
 import java.sql.Timestamp;
 import java.time.Instant;
@@ -18,34 +20,35 @@ import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.StreamSupport;
-import javax.persistence.EntityManager;
-import javax.persistence.PersistenceContext;
-import javax.transaction.Transactional;
-import org.springframework.stereotype.Repository;
+
+import static java.util.stream.Collectors.toList;
 
 /**
  * @author : github.com/sharmasourabh
- * @project : Chapter06 - Modern API Development with Spring and Spring Boot
- **/
+ * @project : Chapter06 - Modern API Development with Spring and Spring Boot Ed 2
+ */
 @Repository
 @Transactional
 public class OrderRepositoryImpl implements OrderRepositoryExt {
 
-  @PersistenceContext
-  private EntityManager em;
+  @PersistenceContext private final EntityManager em;
 
-  private ItemRepository itemRepo;
-  private AddressRepository aRepo;
-  private CartRepository cRepo;
-  private OrderItemRepository oiRepo;
-  private ItemService itemService;
+  private final ItemRepository itemRepo;
+  private final AddressRepository aRepo;
+  private final CartRepository cRepo;
+  private final OrderItemRepository oiRepo;
+  private final ItemService itemService;
 
-  public OrderRepositoryImpl(EntityManager em, ItemRepository itemRepo, AddressRepository aRepo,
-      CartRepository cRepo, OrderItemRepository oiRepo, ItemService itemService) {
+  public OrderRepositoryImpl(
+      EntityManager em,
+      ItemRepository itemRepo,
+      AddressRepository aRepo,
+      CartRepository cRepo,
+      OrderItemRepository oiRepo,
+      ItemService itemService) {
     this.em = em;
     this.itemRepo = itemRepo;
     this.aRepo = aRepo;
@@ -59,18 +62,19 @@ public class OrderRepositoryImpl implements OrderRepositoryExt {
     // Items are already in cart and saved in db when user places the order
     // Here, you can also populate the other Order details like address, card etc.
     Iterable<ItemEntity> dbItems = itemRepo.findByCustomerId(m.getCustomerId());
-    List<ItemEntity> items = StreamSupport.stream(dbItems.spliterator(), false).collect(toList());
+    List<ItemEntity> items = StreamSupport.stream(dbItems.spliterator(), false).toList();
     if (items.size() < 1) {
-      throw new ResourceNotFoundException(String
-          .format("There is no item found in customer's (ID: %s) cart.", m.getCustomerId()));
+      throw new ResourceNotFoundException(
+          String.format("There is no item found in customer's (ID: %s) cart.", m.getCustomerId()));
     }
     BigDecimal total = BigDecimal.ZERO;
     for (ItemEntity i : items) {
       total = (BigDecimal.valueOf(i.getQuantity()).multiply(i.getPrice())).add(total);
     }
     Timestamp orderDate = Timestamp.from(Instant.now());
-    em.createNativeQuery("""
-        INSERT INTO ecomm.orders (address_id, card_id, customer_id, order_date, total, status) 
+    em.createNativeQuery(
+            """
+        INSERT INTO ecomm.orders (address_id, card_id, customer_id, order_date, total, status)
         VALUES(?, ?, ?, ?, ?, ?)
         """)
         .setParameter(1, m.getAddress().getId())
@@ -81,17 +85,31 @@ public class OrderRepositoryImpl implements OrderRepositoryExt {
         .setParameter(6, StatusEnum.CREATED.getValue())
         .executeUpdate();
     Optional<CartEntity> oCart = cRepo.findByCustomerId(UUID.fromString(m.getCustomerId()));
-    CartEntity cart = oCart.orElseThrow(() -> new ResourceNotFoundException(String.format("Cart not found for given customer (ID: %s)", m.getCustomerId())));
-    itemRepo.deleteCartItemJoinById(cart.getItems().stream().map(i -> i.getId()).collect(toList()), cart.getId());
-    OrderEntity entity = (OrderEntity) em.createNativeQuery("""
+    CartEntity cart =
+        oCart.orElseThrow(
+            () ->
+                new ResourceNotFoundException(
+                    String.format(
+                        "Cart not found for given customer (ID: %s)", m.getCustomerId())));
+    itemRepo.deleteCartItemJoinById(
+        cart.getItems().stream().map(ItemEntity::getId).collect(toList()), cart.getId());
+    OrderEntity entity =
+        (OrderEntity)
+            em.createNativeQuery(
+                    """
         SELECT o.* FROM ecomm.orders o WHERE o.customer_id = ? AND o.order_date >= ?
-        """, OrderEntity.class)
-        .setParameter(1, m.getCustomerId())
-        .setParameter(2, OffsetDateTime.ofInstant(orderDate.toInstant(), ZoneId.of("Z")).truncatedTo(
-            ChronoUnit.MICROS))
-        .getSingleResult();
-    oiRepo.saveAll(cart.getItems().stream().map(i -> new OrderItemEntity()
-        .setOrderId(entity.getId()).setItemId(i.getId())).collect(toList()));
+        """,
+                    OrderEntity.class)
+                .setParameter(1, m.getCustomerId())
+                .setParameter(
+                    2,
+                    OffsetDateTime.ofInstant(orderDate.toInstant(), ZoneId.of("Z"))
+                        .truncatedTo(ChronoUnit.MICROS))
+                .getSingleResult();
+    oiRepo.saveAll(
+        cart.getItems().stream()
+            .map(i -> new OrderItemEntity().setOrderId(entity.getId()).setItemId(i.getId()))
+            .collect(toList()));
     return Optional.of(entity);
   }
 }
