@@ -1,27 +1,28 @@
 package com.packt.modern.api.service;
 
-import static java.util.stream.Collectors.toList;
-
 import com.packt.modern.api.entity.ItemEntity;
 import com.packt.modern.api.entity.ProductEntity;
 import com.packt.modern.api.model.Item;
-import java.util.Collections;
+import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import org.springframework.stereotype.Service;
+
+import static java.util.stream.Collectors.toList;
 
 /**
  * @author : github.com/sharmasourabh
- * @project : Chapter06 - Modern API Development with Spring and Spring Boot
- **/
+ * @project : Chapter06 - Modern API Development with Spring and Spring Boot Ed 2
+ */
 @Service
 public class ItemServiceImpl implements ItemService {
 
   @Override
   public ItemEntity toEntity(Item m) {
     ItemEntity e = new ItemEntity();
-    e.setProduct(new ProductEntity().setId(UUID.fromString(m.getId()))).setPrice(m.getUnitPrice())
+    e.setProduct(new ProductEntity().setId(UUID.fromString(m.getId())))
+        .setPrice(m.getUnitPrice())
         .setQuantity(m.getQuantity());
     return e;
   }
@@ -29,16 +30,19 @@ public class ItemServiceImpl implements ItemService {
   @Override
   public List<ItemEntity> toEntityList(List<Item> items) {
     if (Objects.isNull(items)) {
-      return Collections.emptyList();
+      return List.of();
     }
-    return items.stream().map(m -> toEntity(m)).collect(toList());
+    return items.stream().map(this::toEntity).collect(toList());
   }
 
   @Override
   public Item toModel(ItemEntity e) {
     Item m = new Item();
-    m.id(e.getProduct().getId().toString()).unitPrice(e.getPrice()).quantity(e.getQuantity())
-        .description(e.getProduct().getDescription()).name(e.getProduct().getName())
+    m.id(e.getProduct().getId().toString())
+        .unitPrice(e.getPrice())
+        .quantity(e.getQuantity())
+        .description(e.getProduct().getDescription())
+        .name(e.getProduct().getName())
         .imageUrl(e.getProduct().getImageUrl());
     return m;
   }
@@ -46,8 +50,8 @@ public class ItemServiceImpl implements ItemService {
   @Override
   public List<Item> toModelList(List<ItemEntity> items) {
     if (Objects.isNull(items)) {
-      return Collections.emptyList();
+      return List.of();
     }
-    return items.stream().map(e -> toModel(e)).collect(toList());
+    return items.stream().map(this::toModel).collect(toList());
   }
 }
